--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
+    <h1>Giochiamo!</h1>
+
     <div id="number"></div>
 
-    <div id="correct"></div>
-
-    <div id="verify"></div>
+    <div id="correct">I numeri vincenti sono: </div>
 
     <script style="text/javascript" src="js/main.js"></script>
     
